--- a/20newsgroupdata.ipynb
+++ b/20newsgroupdata.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html#tutorial-setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -219,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vect.stop_words_."
+    "count_vect.vocabulary_.get(u'algorithm')"
    ]
   },
   {
@@ -227,7 +234,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tf_transformer = TfidfTransformer(use_idf=False).fit(X_train_counts)\n",
+    "X_train_tf = tf_transformer.transform(X_train_counts)\n",
+    "X_train_tf.shape"
+   ]
   }
  ],
  "metadata": {
