--- a/20newsgroupdata.ipynb
+++ b/20newsgroupdata.ipynb
@@ -4,16 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html#tutorial-setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categories = ['alt.atheism', 'soc.religion.christian','comp.graphics', 'sci.med']"
+    "https://scikit-learn.org/stable/tutorial/text_analytics/working_with_text_data.html#tutorial-setup\n",
+    "https://scikit-learn.org/stable/glossary.html"
    ]
   },
   {
@@ -22,12 +14,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "categories = ['alt.atheism', 'soc.religion.christian','comp.graphics', 'sci.med']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.datasets import fetch_20newsgroups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +46,7 @@
        "['alt.atheism', 'comp.graphics', 'sci.med', 'soc.religion.christian']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
        "2257"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
        "2257"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +169,7 @@
        "array([1, 1, 3, ..., 2, 2, 2], dtype=int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
        "(2257, 35788)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
        "14847"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,11 +223,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4690"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_vect.vocabulary_.get(u'algorithm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2257, 35788)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tf_transformer = TfidfTransformer(use_idf=False).fit(X_train_counts)\n",
+    "X_train_tf = tf_transformer.transform(X_train_counts)\n",
+    "X_train_tf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'mango', 'orange']\n",
+      "[[1 1 0 0]\n",
+      " [0 0 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = [\n",
+    "    \"apple banana\",\n",
+    "    \"orange mango\"\n",
+    "]\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names())\n",
+    "print(X.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer.vocabulary_.get('orange')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2257, 35788)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " tfidf_transformer = TfidfTransformer()\n",
+    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
+    "X_train_tfidf.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.],\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tf.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_vect.vocabulary_.get(u'algorithm')"
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = MultinomialNB().fit(X_train_tfidf, twenty_train.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'God is love' => soc.religion.christian\n",
+      "'OpenGL on the GPU is fast' => comp.graphics\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs_new = ['God is love', 'OpenGL on the GPU is fast']\n",
+    "X_new_counts = count_vect.transform(docs_new)\n",
+    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
+    "\n",
+    "predicted = clf.predict(X_new_tfidf)\n",
+    "\n",
+    "for doc, category in zip(docs_new, predicted):\n",
+    "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
    ]
   },
   {
@@ -234,12 +406,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "tf_transformer = TfidfTransformer(use_idf=False).fit(X_train_counts)\n",
-    "X_train_tf = tf_transformer.transform(X_train_counts)\n",
-    "X_train_tf.shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
